# prospecta-nicho

./: .deploy-version  .env.example  .gitignore  404.html  README.md  cspell.json  eslint.config.mjs  index.html  index.txt  next.config.ts  package-lock.json  package.json  playwright.config.ts  sitemap.xml  tsconfig.json
.github/: dependabot.yml
404/: index.html
admin/: index.html  index.txt
amostra/: index.html  index.txt
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
aviso-de-dados-empresariais/: index.html  index.txt
blog/: index.html  index.txt
campos-da-base/: index.html  index.txt
como-funciona/: index.html  index.txt
components/: AppShell.tsx  Brand.tsx  BrandLogo.tsx  BrandWatermark.tsx  ButtonLink.tsx  CheckoutStatus.tsx  ContactForm.tsx  CookieBanner.tsx  FAQAccordion.tsx  Footer.tsx  Forms.tsx  Header.tsx  HomeBaseBuilderTeaser.tsx  HomeSampleForm.tsx  LeadDeliveryPreview.tsx  LeadPreviewSheet.tsx  LegacyFrame.tsx  OpportunityRadar.tsx  OpportunityShowcase.tsx  PreviewBanner.tsx  ProductCard.tsx  ProductSignalCard.tsx  ProductVisual.tsx  SampleConversionSection.tsx  SectionTitle.tsx  SignalStrip.tsx  WhatsAppButton.tsx
contato/: index.html  index.txt
conteudos/: index.html  index.txt
docs/: admin-roles.md  architecture.md  assets-licenses.md  auditoria-atual.md  auditoria-content-studio-e-qa.md  auditoria-final-prospectanicho.md  auditoria-final-ui-qa.md  auditoria-ui-ux-e-tecnica.md  code-standards.md  (+21 more)
workers/rfb_cnpj/: README.md  __init__.py  __main__.py  manifest.sample.json  privacy.py  pyproject.toml
(+261 files in other folders)
